--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "expo-status-bar": "^1.0.2",
         "firebase": "^7.17.1",
         "formik": "^2.1.5",
+        "jsonwebtoken": "^8.5.1",
         "lottie-react-native": "~2.6.1",
         "moment": "^2.27.0",
         "react": "~16.11.0",
