--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "yup": "^0.29.1",
-    "expo-secure-store": "~9.0.1"
+    "expo-secure-store": "~9.0.1",
+    "expo-notifications": "~0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
