--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "apisauce": "^1.1.1",
+    "bson-objectid": "^1.3.1",
     "expo": "^38.0.9",
     "expo-blur": "~8.1.2",
     "expo-constants": "^9.1.1",
     "expo-image-picker": "~8.3.0",
     "expo-location": "~8.2.1",
+    "expo-notifications": "~0.3.3",
     "expo-permissions": "~9.0.1",
+    "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "firebase": "^7.17.1",
     "formik": "^2.1.5",
@@ -34,14 +37,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "yup": "^0.29.1",
-    "expo-secure-store": "~9.0.1",
-    "expo-notifications": "~0.3.3"
+    "socket.io-client": "^2.3.0",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
